# tree-sitter-git-merge-conflict

./: CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-git_merge_conflict.h  tree-sitter-git_merge_conflict.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_git_merge_conflict/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterGitMergeConflictTests/: TreeSitterGitMergeConflictTests.swift
queries/: highlights.scm
queries/git_merge_conflict/: folds.scm  highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: conflict.txt  no-conflict.txt  partial-conflict.txt
test/highlight/: conflict.git_merge_conflict
