[package]
name = "tree-sitter-git-merge-conflict"
description = "Parser for Git Merge Conflicts with support for Diff3 and nestined conflicts"
version = "0.1.0"
authors = ["Paulo Hernandez <paulovitormsh@hotmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "git-merge-conflict"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/pv-hernandez/tree-sitter-git-merge-conflicts.git"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.3"
