[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-git-merge-conflict"
description = "Parser for Git Merge Conflicts with support for Diff3 and nestined conflicts"
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "git-merge-conflict"]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Paulo Hernandez", email = "paulovitormsh@hotmail.com" }]
requires-python = ">=3.9"
license.text = "MIT"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/pv-hernandez/tree-sitter-git-merge-conflicts.git"

[project.optional-dependencies]
core = ["tree-sitter~=0.22"]

[tool.cibuildwheel]
build = "cp39-*"
build-frontend = "build"
